[gd_scene load_steps=12 format=3 uid="uid://c3p3nco4j15tj"]

[ext_resource type="Script" path="res://scenes/button_led/button_led.gd" id="1_kcc8r"]
[ext_resource type="FontFile" uid="uid://enfp4afuixsa" path="res://sprites/m5x7.ttf" id="2_156qn"]
[ext_resource type="Script" path="res://scenes/button_led/button_led_indicator.gd" id="4_58lk6"]
[ext_resource type="Texture2D" uid="uid://dh3mlfs6d0uyb" path="res://sprites/spritesheet.png" id="4_v3uum"]
[ext_resource type="Script" path="res://scenes/button_led/button_led_actionable.gd" id="5_qapvl"]
[ext_resource type="PackedScene" uid="uid://d4ahxdiuplehv" path="res://scenes/click_player/click_player.tscn" id="6_tgnuj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xicft"]
atlas = ExtResource("4_v3uum")
region = Rect2(168, 150, 69, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_stvyw"]
atlas = ExtResource("4_v3uum")
region = Rect2(240, 150, 69, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1fmv"]
atlas = ExtResource("4_v3uum")
region = Rect2(315, 156, 33, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4rtw"]
atlas = ExtResource("4_v3uum")
region = Rect2(318, 177, 27, 12)

[sub_resource type="LabelSettings" id="LabelSettings_poq8j"]
resource_local_to_scene = true
font = ExtResource("2_156qn")
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0.533333, 0.533333, 0.533333, 1)

[node name="ButtonLED" type="Node2D"]
script = ExtResource("1_kcc8r")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 69.0
offset_bottom = 66.0
texture_normal = SubResource("AtlasTexture_xicft")
texture_pressed = SubResource("AtlasTexture_stvyw")

[node name="Offset" type="Node2D" parent="."]

[node name="RedLED" type="Sprite2D" parent="Offset"]
position = Vector2(34, 39)
texture = SubResource("AtlasTexture_y1fmv")

[node name="BlueLED" type="Sprite2D" parent="Offset"]
position = Vector2(34, 39)
texture = SubResource("AtlasTexture_k4rtw")

[node name="Label" type="Label" parent="Offset"]
unique_name_in_owner = true
offset_left = 14.0
offset_top = 6.0
offset_right = 55.0
offset_bottom = 38.0
text = "WAW"
label_settings = SubResource("LabelSettings_poq8j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonLEDIndicator" type="Node" parent="."]
script = ExtResource("4_58lk6")

[node name="Actionable" type="Node" parent="."]
script = ExtResource("5_qapvl")

[node name="ClickPlayer" parent="." instance=ExtResource("6_tgnuj")]
unique_name_in_owner = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_2_button_down"]
[connection signal="button_down" from="TextureButton" to="ClickPlayer" method="_on_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_2_button_up"]
[connection signal="button_up" from="TextureButton" to="ClickPlayer" method="_on_button_up"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
